--- a/public/index.html
+++ b/public/index.html
@@ -199,27 +199,7 @@
         </div>
       </div>
 
-      <div class="sidebar">
-        <div class="usuario">
-          <img src="assets/img/catanacomics.svg" />
-          <div class="texto">
-            <strong>catanacomics</strong>
-            Catana
-          </div>
-        </div>
-
-        <div class="sugestoes">
-          
-        </div>
-
-        <div class="links">
-          Sobre • Ajuda • Imprensa • API • Carreiras • Privacidade • Termos • Localizações • Contas mais relevantes • Hashtags • Idioma
-        </div>
-
-        <div class="copyright">
-          © 2021 INSTAGRAM DO FACEBOOK
-        </div>
-      </div>
+      <div class="sidebarReact"></div>
     </div>
 
     <div class="fundo-mobile">
