--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="corpoReact"></div>
+    <div class="corpo"></div>
 
     <div class="fundo-mobile">
       <ion-icon name="home"></ion-icon>
